<resources>
    <string name="app_name">AndroidHomework</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Onboarding -->
    <string name="Next">Next</string>
    <string name="skip">Skip</string>
    <string name="understand">Understand</string>
    <string name="in_terms_of_kotlin">(In terms of Kotlin)</string>
    <string name="onboarding_first">I can\'t</string>
    <string name="anything">ANYTHING</string>
    <!-- Login -->
    <string name="please_sign_in">Please Sign In</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in">Log in</string>
    <string name="toastLogIn">Login successfully</string>
    <string name="toastLogInWrong">Wrong login or password, try again</string>
    <string name="toastLogInWrongInput">All fields must be filled</string>
    <string name="registrationText">Or if you new here, you can</string>
    <string name="SignUp">Sign Up</string>
    <!-- Registration -->
    <string name="login">login</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="insert_new_data_below">Insert new data below</string>
    <string name="reg_failed">Registration incomplete, you need to enter all fields </string>
    <string name="reg_succ">Registration complete </string>
    <string name="back_to_signing_in">Back to signing in</string>
    <!-- Notes -->
    <string name="note_saved">Note saved</string>
    <string name="save_failed">You can not save empty note</string>


</resources>